fixing footer spacing

--- a/css/oldstyle.css
+++ b/css/oldstyle.css
@@ -259,8 +259,8 @@ a {
 }
 
 .footer-container {
-  padding-top: 30px;
-  padding-bottom: 15px;
+  padding-top: 10px;
+  padding-bottom: 20px;
   background: linear-gradient(#5a5a5a, #000);
 }
 
